<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:orientation="vertical"
    android:background="@color/app_bg" >
    
    <TextView
        android:text="@string/account_setting"
        android:textColor="@color/font_hint"
        style="@style/SmallTextViewTitle" />
    
    <Button
        android:id="@+id/btn_logout"
        android:text="@string/logout"
        android:gravity="center"
        style="@style/SettingButton" />
    
    <TextView
        android:text="@string/program_info"
        android:textColor="@color/font_hint"
        android:layout_marginBottom="@dimen/margin_tiny"
        style="@style/SmallTextViewTitle" />
    
    <Button
        android:id="@+id/btn_version"
        android:layout_marginBottom="@dimen/margin_tiny"
        style="@style/SettingButton" />
    
    <Button
        android:id="@+id/btn_to_tutorial"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:text="@string/tutorial"
        style="@style/SettingButton" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:background="@drawable/btn_white_idle" >
        
        <CheckBox
            android:id="@+id/cb_allow_push"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />
        
        <TextView
            android:text="@string/enable_push"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:paddingLeft="@dimen/margin"
            style="@style/BaseTextView" />
        
    </RelativeLayout>
    
    <TextView
        android:text="@string/link"
        style="@style/SmallTextViewTitle" />
    
    <Button
        android:id="@+id/btn_request"
        android:layout_marginBottom="@dimen/margin_tiny"
        android:text="@string/service_suggestion"
        style="@style/SettingButton" />
    
    <Button
        android:id="@+id/btn_to_facebook"
        android:text="@string/collabo_facebook"
        android:layout_marginBottom="@dimen/margin_bigger"
        style="@style/SettingButton" />
    
    <Button
        android:id="@+id/btn_withdraw"
        android:text="@string/withdraw"
        android:gravity="center"
        style="@style/SettingButton" />

</LinearLayout>
