<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    android:background="@drawable/container_dialog" >
    
    <TextView
        android:text="@string/dialog_update_title"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin"
        style="@style/S2.Widget.TextView.H1" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_big"
        android:orientation="horizontal" >
        
	    <Button
	        android:id="@+id/btn_update"
	        android:text="@string/update"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:background="@drawable/button_grey_selector"
	        android:layout_marginRight="@dimen/margin"
	        style="@style/ButtonBase" />
        
	    <Button
	        android:id="@+id/btn_no_update"
	        android:text="@string/update_later"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:background="@drawable/button_grey_selector"
	        style="@style/ButtonBase" />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_exit"
        android:text="@string/exit"
        android:layout_width="match_parent"
        android:background="@drawable/button_grey_selector"
        style="@style/ButtonBase" />

</LinearLayout>