<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_container" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin"
        android:orientation="vertical" >
        
        <TextView
            android:text="비밀번호 변경"
            style="@style/TextViewTitle" />
        
        <ImageView
        	style="@style/DividerHorizontal" />
        
        <EditText
	        android:id="@+id/et_user_old_password"
	        android:hint="@string/hint_old_password"
	        android:inputType="textPassword"
	        android:maxLength="32"
	        style="@style/BaseEditText" />
        
        <ImageView
        	style="@style/DividerHorizontal" />
        
        <EditText
	        android:id="@+id/et_user_new_password"
	        android:hint="@string/hint_new_password"
	        android:maxLength="32"
	        android:inputType="textPassword"
	        style="@style/BaseEditText" />
        
        <ImageView
        	style="@style/DividerHorizontal" />
        
        <EditText
	        android:id="@+id/et_user_new_password_re"
	        android:hint="@string/hint_re_password"
	        android:maxLength="32"
	        android:inputType="textPassword"
	        style="@style/BaseEditText" />
        
    </LinearLayout>
    
    <ImageView
        style="@style/DividerHorizontal" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin" >
        
        <Button
		    android:id="@+id/btn_change_password"
		    android:layout_alignParentRight="true"
		    android:text="@string/change"
		    android:background="@drawable/btn_primary_selector"
		    style="@style/ButtonBase" />
        
    </RelativeLayout>

</LinearLayout>
