<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/container_dialog" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin"
        android:orientation="vertical" >
        
        <TextView
            android:text="@string/report"
            style="@style/TextViewTitle" />
        
        <ImageView
        	style="@style/DividerHorizontal" />
        
        <TextView
            android:id="@+id/tv_comment_content"
            android:paddingTop="@dimen/margin"
            android:paddingBottom="@dimen/margin"
            style="@style/TextViewHint" />
        
        <ImageView
        	style="@style/DividerHorizontal" />
        
        <EditText
	        android:id="@+id/et_report_content"
	        android:hint="@string/hint_report_comment"
	        android:inputType="textShortMessage"
	        android:maxLines="3"
	        style="@style/BaseEditText" />
        
    </LinearLayout>
    
    <ImageView
        style="@style/DividerHorizontal" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin" >
        
        <Button
		    android:id="@+id/btn_report"
		    android:layout_alignParentRight="true"
		    android:text="@string/submit"
		    android:background="@drawable/button_primary_selector"
		    style="@style/ButtonBase" />
        
    </RelativeLayout>

</LinearLayout>