<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.myandb.singsong"
    android:layout_gravity="top|center_horizontal"
    android:layout_marginTop="50dp"
    style="@style/DialogBox" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark" >
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:text="@string/write_comment"
	        style="@style/DialogTextViewTitle" />
	    
	    <ImageView
	        android:id="@+id/iv_cancel"
	        android:src="@drawable/ic_x_inverse"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        style="@style/BaseImageView" />
        
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small" >
        
        <com.myandb.singsong.widget.RoundedImageView
            android:id="@+id/iv_writer_photo"
            android:layout_marginRight="@dimen/margin_tiny"
            app:oval="true"
            style="@style/UserImageView" />
        
        <EditText
            android:id="@+id/et_comment"
            android:layout_toRightOf="@id/iv_writer_photo"
            android:hint="@string/hint_write_comment"
            android:gravity="top"
            android:maxLength="200"
            style="@style/CommentEditText" />
        
    </RelativeLayout>
    
    <ImageView
        style="@style/DividerHorizontal" />
    
    <Button
        android:id="@+id/btn_submit"
        android:text="@string/submit"
        style="@style/DialogButton" />

</LinearLayout>