<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:background="@color/app_bg" >
    
    <ImageView
        android:id="@+id/logo"
        style="@style/BaseImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin"
        android:src="@drawable/logo_text" />
    
    <LinearLayout
        android:id="@+id/id_wrapper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_height"
        android:layout_below="@id/logo"
        android:layout_marginBottom="@dimen/margin"
        android:background="@drawable/box_basic"
        android:orientation="horizontal" >
        
        <ImageView
            android:layout_width="@dimen/form_height"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_big"
            android:src="@drawable/ic_man"
            android:background="@color/icon_bg"
            style="@style/BaseImageView" />
        
        <ImageView
	            style="@style/DividerVertical" />
        
        <EditText
	        android:id="@+id/et_user_username"
	        android:hint="@string/hint_username_compat"
	        android:inputType="textPersonName"
	        android:background="@color/white"
	        style="@style/BaseEditText" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/pw_wrapper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_height"
        android:layout_below="@id/id_wrapper"
        android:layout_marginBottom="@dimen/margin"
        android:background="@drawable/box_basic"
        android:orientation="horizontal" >
        
        <ImageView
            android:layout_width="@dimen/form_height"
            android:layout_height="match_parent"
            android:padding="@dimen/margin"
            android:src="@drawable/ic_lock"
            android:background="@color/icon_bg"
            style="@style/BaseImageView" />
        
        <ImageView
	            style="@style/DividerVertical" />
        
        <EditText
	        android:id="@+id/et_user_password"
	        android:hint="@string/hint_password"
	        android:maxLength="32"
	        android:inputType="textPassword"
	        android:background="@color/white"
	        style="@style/BaseEditText" />
        
    </LinearLayout>
    
    <Button
	    android:id="@+id/btn_login"
	    android:layout_marginBottom="@dimen/margin"
	    android:layout_below="@id/pw_wrapper"
	    android:text="@string/login"
	    style="@style/DisabledButton" />
    
    <RelativeLayout
        android:id="@+id/fb"
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_height"
        android:layout_below="@id/btn_login"
        android:layout_marginBottom="@dimen/margin"
        android:background="@color/facebook" >
        
        <ImageView
            android:id="@+id/fb_icon"
            android:layout_width="@dimen/form_height"
            android:layout_height="match_parent"
            android:src="@drawable/ic_facebook"
            style="@style/BaseImageView" />
        
        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/fb_icon"
            android:text="@string/login_with_facebook"
            android:textColor="@color/font_white"
            android:background="@null" />
        
    </RelativeLayout>
    
    <TextView
		android:id="@+id/tv_find_password"
		android:layout_below="@id/fb"
		android:linksClickable="true"
		style="@style/BaseTextView" />
    
    <Button
	    android:id="@+id/btn_signup"
	    android:layout_alignParentBottom="true"
	    android:text="@string/to_join"
	    style="@style/DarkButton" />
    
</RelativeLayout>

