<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg" >
     
    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/margin_small"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/btn_submit_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_tiny"
            android:padding="@dimen/margin_tiny"
            android:textSize="@dimen/text_small"
            android:textColor="@color/font_white"
            android:text="@string/save"
            android:background="@drawable/btn_primary_selector" />
        
        <Button
            android:id="@+id/btn_cancel_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:padding="@dimen/margin_tiny"
            android:textSize="@dimen/text_small"
            android:textColor="@color/font_white"
            android:text="@string/cancel"
            android:background="@drawable/btn_grey_selector" />
        
    </LinearLayout>
    
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@id/wrapper"
	    android:background="@color/app_bg" >
	    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
		    <FrameLayout
		         android:id="@+id/fl_photo_wrapper"
		         android:layout_width="@dimen/photo_profile"
		         android:layout_height="@dimen/photo_profile"
		         android:layout_marginTop="@dimen/margin_big"
		         android:layout_centerHorizontal="true"
		         android:background="@drawable/box_profile_photo" >
		         
				<ImageView
				    android:id="@+id/iv_user_photo"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    style="@style/UserImageView" />
				
				<ImageView
				    style="@style/BaseImageView"
				    android:src="@drawable/ic_camera" />
		         
		     </FrameLayout>
		     
		    <RelativeLayout
		        android:id="@+id/nickname_wrapper"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/fl_photo_wrapper"
		        android:padding="@dimen/margin"
		        android:orientation="vertical" >
		        
		        <TextView
		            android:id="@+id/nickname"
		            android:text="@string/nickname"
		            style="@style/BaseTextView" />
		        
		        <TextView
		            android:id="@+id/tv_valid_nickname"
		            android:layout_marginLeft="@dimen/margin_small"
		            android:layout_toRightOf="@id/nickname"
		            style="@style/BaseTextView" />
		        
		        <EditText
		            android:id="@+id/et_nickname"
		            android:layout_below="@id/nickname"
		            android:singleLine="true"
		            android:maxLength="32"
		            style="@style/BaseEditText" />
		        
		    </RelativeLayout>
		    
		    <LinearLayout
		        android:id="@+id/email_wrapper"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/nickname_wrapper"
		        android:padding="@dimen/margin"
		        android:orientation="vertical" >
		        
		        <TextView
		            android:text="@string/email"
		            style="@style/BaseTextView" />
		        
		        <EditText
		            android:id="@+id/et_email"
		            android:singleLine="true"
		            android:maxLength="256"
		            style="@style/BaseEditText" />
		        
		    </LinearLayout>
		     
		    <LinearLayout
		        android:id="@+id/kakao_wrapper"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/email_wrapper"
		        android:padding="@dimen/margin"
		        android:orientation="vertical" >
		        
		        <TextView
		            android:text="@string/kakaotalk"
		            style="@style/BaseTextView" />
		        
		        <EditText
		            android:id="@+id/et_kakaotalk"
		            android:singleLine="true"
		            android:maxLength="32"
		            style="@style/BaseEditText" />
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:id="@+id/status_wrapper"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/kakao_wrapper"
		        android:padding="@dimen/margin"
		        android:orientation="vertical" >
		        
		        <TextView
		            android:text="@string/status_message"
		            style="@style/BaseTextView" />
		        
		        <EditText
		            android:id="@+id/et_status"
		            android:singleLine="true"
		            android:maxLength="40"
		            style="@style/BaseEditText" />
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/status_wrapper"
		        android:padding="@dimen/margin"
		        android:orientation="vertical" >
		        
		        <TextView
		            android:text="@string/change_password"
		            style="@style/BaseTextView" />
		        
		        <EditText
		            android:id="@+id/et_old_password"
		            android:layout_marginBottom="@dimen/margin_small"
		            android:singleLine="true"
		            android:maxLength="32"
		            android:inputType="textPassword"
		            android:hint="기존 비밀번호 입력"
		            style="@style/BaseEditText" />
		        
		        <EditText
		            android:id="@+id/et_new_password"
		            android:layout_marginBottom="@dimen/margin_small"
		            android:singleLine="true"
		            android:maxLength="32"
		            android:inputType="textPassword"
		            android:hint="새로운 비밀번호 입력"
		            style="@style/BaseEditText" />
		        
		        <EditText
		            android:id="@+id/et_new_password_re"
		            android:layout_marginBottom="@dimen/margin_small"
		            android:singleLine="true"
		            android:maxLength="32"
		            android:inputType="textPassword"
		            android:hint="새로운 비밀번호 재입력"
		            style="@style/BaseEditText" />
		        
		        <Button
		            android:id="@+id/btn_change_password"
		            android:text="비밀번호를 변경합니다."
		            style="@style/DarkButton" />
		        
		    </LinearLayout>
	        
	    </RelativeLayout>
	    
	</ScrollView>

</RelativeLayout>
